--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name dox.app.br;
+	server_name dev.dox.app.br www.dev.dox.app.br;
 	server_tokens off;
 
 	location /.well-known/acme-challenge/ {
@@ -8,51 +8,68 @@ server {
 	}
 
 
-	location /app/ {
-		alias /var/www/nginx_data/prod/build/web/;
+	location /front {
+		alias /var/www/web_front_distr/dev/build/web/;
+		auth_basic "Restricted Access";
+		auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
+		try_files $uri $uri/ /index.html;
+
+
 		index index.html;
+	}
+	location /pprod/front {
+		alias /var/www/web_front_distr/pprod/build/web/;
+		auth_basic "Restricted Access";
+		auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
+		try_files $uri $uri/ /index.html;
+
+
+		index index.html;
+	}
+	location /v1/front {
+		alias /var/www/web_front_distr/dev-v1/build/web/;
+		auth_basic "Restricted Access";
+		auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
+		try_files $uri $uri/ /index.html;
+
+
+		index index.html;
+	}
+
+	location /pprod/api/ {
+		rewrite ^/pprod/api/(.*)$ /$1 break;
+
+		proxy_pass http://localhost:5005;
 	}
 	location /api/ {
 		rewrite ^/api/(.*)$ /$1 break;
-		proxy_pass http://localhost:5000;
-	}
-	location /dev/ {
-		rewrite ^/dev/(.*)$ /$1 break;
 
-		proxy_pass http://dox-acer.myddns.me;
+		proxy_pass http://localhost:5002;
 
 	}
+	location /v1/api/ {
+		rewrite ^/v1/api/(.*)$ /$1 break;
 
-	location /assets/ {
-		alias /var/www/nginx_data/assets/;
+		proxy_pass http://localhost:5001;
+
 	}
 
-	location / {
-		return 301 /landing;
-	}
-
-	location /landing/ {
-		alias /var/www/nginx_data/landing/;
-		index index.html;
-		try_files $uri $uri/ /landing/index.html;
-		autoindex off;
-	}
 }
 
 server {
 	listen 443 ssl;
-	server_name dox.app.br;
+	server_name dev.dox.app.br www.dev.dox.app.br;
 	server_tokens off;
 
-	ssl_certificate /etc/letsencrypt/live/dox.app.br/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/dox.app.br/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/dev.dox.app.br/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/dev.dox.app.br/privkey.pem;
 	include /etc/letsencrypt/options-ssl-nginx.conf;
 	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 	location / {
-		proxy_pass http://dox.app.br;
-		proxy_set_header Host $http_host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_pass http://dev.dox.app.br;
+		# proxy_set_header Host $http_host;
+		# proxy_set_header X-Real-IP $remote_addr;
+		# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 }
