--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -41,7 +41,7 @@ server {
 
 server {
 	listen 443 ssl;
-	server_name dox.app.br;
+	server_name www.dox.app.br dox.app.br;
 	server_tokens off;
 
 	ssl_certificate /etc/letsencrypt/live/dox.app.br/fullchain.pem;
