--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,42 +1,19 @@
+client_max_body_size 100M;
+
 server {
 	listen 80;
 	server_name dox.app.br;
 	server_tokens off;
+	# Redirect all HTTP requests to HTTPS
+	location / {
+		return 301 https://$host$request_uri;
+	}
 
 	location /.well-known/acme-challenge/ {
 		root /var/www/certbot;
 	}
 
 
-	location /app/ {
-		alias /var/www/nginx_data/prod/build/web/;
-		index index.html;
-	}
-	location /api/ {
-		rewrite ^/api/(.*)$ /$1 break;
-		proxy_pass http://localhost:5000;
-	}
-	location /dev/ {
-		rewrite ^/dev/(.*)$ /$1 break;
-
-		proxy_pass http://dox-acer.myddns.me;
-
-	}
-
-	location /assets/ {
-		alias /var/www/nginx_data/assets/;
-	}
-
-	location / {
-		return 301 /landing;
-	}
-
-	location /landing/ {
-		alias /var/www/nginx_data/landing/;
-		index index.html;
-		try_files $uri $uri/ /landing/index.html;
-		autoindex off;
-	}
 }
 
 server {
@@ -48,11 +25,28 @@ server {
 	ssl_certificate_key /etc/letsencrypt/live/dox.app.br/privkey.pem;
 	include /etc/letsencrypt/options-ssl-nginx.conf;
 	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+	location /app {
+		alias /var/www/nginx_data/prod/build/web/;
+		index index.html;
+		try_files $uri $uri/ /index.html;
+	}
+	location /api/ {
+		rewrite ^/api/(.*)$ /$1 break;
+		proxy_pass http://localhost:5000;
+	}
+
+	location /assets/ {
+		alias /var/www/nginx_data/assets/;
+	}
 
 	location / {
-		proxy_pass http://dox.app.br;
-		proxy_set_header Host $http_host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		return 301 /landing;
+	}
+
+	location /landing {
+		alias /var/www/nginx_data/landing/;
+		index index.html;
+		try_files $uri $uri/ /landing/index.html;
+		autoindex off;
 	}
 }
