--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -17,8 +17,31 @@ server {
 }
 
 server {
+	listen 80;
+	server_name www.dox.app.br;
+	server_tokens off;
+	location / {
+		return 301 https://dox.app.br$request_uri;
+	}
+}
+
+server {
 	listen 443 ssl;
-	server_name www.dox.app.br dox.app.br;
+	server_name www.dox.app.br;
+	server_tokens off;
+	ssl_certificate /etc/letsencrypt/live/dox.app.br/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/dox.app.br/privkey.pem;
+	include /etc/letsencrypt/options-ssl-nginx.conf;
+	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+	location / {
+		return 301 https://dox.app.br$request_uri;
+	}
+}
+
+
+server {
+	listen 443 ssl;
+	server_name r dox.app.br;
 	server_tokens off;
 
 	ssl_certificate /etc/letsencrypt/live/dox.app.br/fullchain.pem;
